<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eMobc</string>
    <string name="app_description">eMobc</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_back">Volver</string>
    <string name="menu_tts">Leer</string>
    <string name="menu_map">Ver Mapa</string>
    <string name="reading">Lectura en Curso</string>
    <string name="reading_stop">Parar de Leer</string>
    <string name="reading_continue">Continuar Leyendo</string>
    <string name="menu_map_mad">Plano</string>
    <string name="search">Buscador</string>
    <string name="readingempty">Busqueda Vacia</string>
    <string name="readingback">Volver a Buscar</string>
    <string name="err_level_data_title">Error</string>
    <string name="err_level_data_alert">No se ha podido cargar el archivo de datos</string>
    <string name="menu_map_near">Cerca de aquí</string>
    <string name="form_submit_buttom">Enviar</string>
    <string name="form_level_title">Error</string>
    <string name="form_level_alert_required_fields">Faltan datos en campos obligatorios</string>
    <string name="menu_settings">Settings</string>
    <string name="hint">Hint: touch the first or last day of month to move to previous or next month.</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="prev">&lt;</string>
    <string name="next">></string>
    <string name="events_day">"Eventos del día: "</string>
    <string name="month1">Enero</string>
    <string name="month2">Febrero</string>
    <string name="month3">Marzo</string>
    <string name="month4">Abril</string>
    <string name="month5">Mayo</string>
    <string name="month6">Junio</string>
    <string name="month7">Julio</string>
    <string name="month8">Agosto</string>
    <string name="month9">Septiembre</string>
    <string name="month10">Octubre</string>
    <string name="month11">Noviembre</string>
    <string name="month12">Diciembre</string>
    <string name="cargando_pdf">Cargando pdf&#8230;</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_questions">QuizQuestionsActivity</string>
    <string name="quiz_alert_no_answer">No has marcado ninguna respuesta. ¿Estás seguro que quieres continuar?. Recuerda que no podrás volver a esta pregunta.</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="average">Media</string>
    <string name="corrects">Corrects</string>
    <string name="incorrects">Incorrects</string>
    <string name="title_activity_quiz_results">QuizResultsActivity</string>
    <string name="quiz_alert_exit">¿Estás seguro que quieres salir? Se perderán todos los progresos.</string>
    <string name="title_activity_canvas">CanvasActivity</string>
	<string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="crud">ABM</string>
    <string name="crud_create">Crear</string>
    <string name="crud_open">Abrir</string>
    <string name="crud_delete">Eliminar</string>
    <string name="crud_delete_confirm">Confirmar Borrado</string>
    <string name="crud_delete_confirm_msg">Confirma el borrado de\n%s?</string>
    <string name="view_profile">Ver Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="header">Cabecera</string>
    <string name="price">Precio: </string>
    <string name="sale_status">Estado: </string>
    <string name="sale_pay_key">Código Compra: </string>
    <string name="dialog_pay_error">Error en el Pago</string>
    <string name="dialog_pay_error_id">Id Error: </string>
    <string name="dialog_pay_error_message">Error: </string>
</resources>