<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sideMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:cacheColorHint="#999999"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/MenuHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/sideMenuList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.21"
            android:background="#FFFFFF"
            android:cacheColorHint="#999999"
            android:visibility="visible" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/backgroundLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:gravity="center_vertical|center_horizontal"
                android:scaleType="fitXY"
                android:text="@string/header" />

            <!-- Sale Here -->

            <ImageView
                android:id="@+id/sale_img"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@+id/header"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/imagen1" />

            <TextView
                android:id="@+id/sale_descr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_img"
                android:gravity="center_vertical|center_horizontal"
                android:scaleType="fitXY"
                android:text="@null" />

            <LinearLayout
                android:id="@+id/sale_price_grp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_descr"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sale_price_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@string/price"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sale_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@null"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sale_status_grp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_price_grp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sale_status_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@string/sale_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sale_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@null"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sale_pay_key_grp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sale_status_grp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sale_pay_key_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@string/sale_pay_key"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sale_pay_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:text="@null"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</FrameLayout>